<resources>
    <string name="app_name">Person Generator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Options</string>

    <!-- Strings for the main activity -->
    <string name="name_format">%1$s %2$s</string>
    <string name="gender_format">Gender: %s</string>
    <string name="age_format">Age: %d</string>
    <string name="region_format">Region: %s</string>
    <string name="phone_format">Phone: %s</string>
    <string name="birthday_format">Birthday: %s</string>
    <string name="email_format">Email: %s</string>

    <string name="avatar_description">Profile Picture</string>

    <!-- Strings related to Settings -->
    <string name="extended_info">Extended Info</string>
    <string name="gender_filter">Gender Filter</string>

    <!-- Example General settings -->

    <string name="pref_title_ext_info">Enable Extended info</string>
    <string name="pref_description_ext_info">Show extra info during person generation</string>

    <string name="pref_title_gender_filter">Select Genders to filter</string>
    <string-array name="pref_gender_titles">
        <item>Random</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pref_gender_values">
        <item>Random</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="pref_title_region_filter">Select Region to filter to</string>
    <string-array name="pref_region_titles">
        <item>Random</item>
        <item>Albania</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bangladesh</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>England</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Iran</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Pakistan</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United States</item>
        <item>Vietnam</item>
    </string-array>
    <string-array name="pref_region_values">
        <item>Random</item>
        <item>Albania</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bangladesh</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>England</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>India</item>
        <item>Iran</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>Pakistan</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United States</item>
        <item>Vietnam</item>
    </string-array>
    <string name="widget_name_desc">Generated Name</string>
    <string name="widget_gender_desc">Generated Gender</string>
    <string name="widget_region_desc">Generated Region</string>
    <string name="widget_refresh_desc">Regenerate results</string>
    <string name="add_widget">Add widget</string>
</resources>
