<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item
        android:id="@+id/nav_ext"
        android:icon="@drawable/ic_menu_person_ext"
        android:title="@string/extended_info"
        app:actionLayout="@layout/activity_main_switch" />

    <item
        android:id="@+id/spinner"
        android:icon="@drawable/ic_menu_person"
        android:title="@string/gender_filter"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

</menu>
