<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/widget_name"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="5dp"
        android:background="#09C"
        android:contentDescription="@string/widget_name_desc"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:text="Jeana Celan" />

    <TextView
        android:id="@+id/widget_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="5dp"
        android:background="#09C"
        android:contentDescription="@string/widget_gender_desc"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:text="Gender: Female" />

    <TextView
        android:id="@+id/widget_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_gender"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:background="#09C"
        android:contentDescription="@string/widget_region_desc"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:text="Region: Romania" />

    <ImageView
        android:id="@+id/widget_refresh"
        android:layout_width="245dp"
        android:layout_height="113dp"
        android:layout_below="@+id/widget_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-37dp"
        android:contentDescription="@string/widget_refresh_desc" />

</RelativeLayout>